Fixed heights and scrollbars on code viewer

--- a/src/css/CodeViewer.scss
+++ b/src/css/CodeViewer.scss
@@ -12,7 +12,7 @@
 }
 
 .code-viewer-container {
-    width: 100%;
+    width: calc(100% - Variables.$margin-left-right-edges);
     height: calc(100% - 8em);
     display: flex;
     justify-items: center;
@@ -37,10 +37,12 @@
 
   .code-container {
     overflow-y: scroll !important;
-    height: calc(100% - 3em);
+    height: calc(100% - 2.25em);
     margin: auto;
     display: flex;
     flex-grow: 1;
+    margin-bottom: 0;
+    margin-top: 0;
   }
 
   code[class*="language-python"], pre[class*="language-python"] {
