--- a/src/css/RightPage.scss
+++ b/src/css/RightPage.scss
@@ -1,7 +1,7 @@
 @use "Variables";
 
 .right-app {
-    width: 50%;
+    width: 40%;
     display: flex;
     flex-wrap: wrap;
     margin-top: Variables.$margin-top-bottom-edges;
