--- a/src/css/scrollbar.scss
+++ b/src/css/scrollbar.scss
@@ -2,7 +2,8 @@
 
 /* width */
 ::-webkit-scrollbar {
-    width: 10px;
+    width: 10px !important;
+    height: 10px !important;
   }
   
   /* Track */
